added div for searchbox

--- a/artist4all_angular/src/index.html
+++ b/artist4all_angular/src/index.html
@@ -16,6 +16,7 @@
   <script src="http://momentjs.com/downloads/moment.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emoji-button@latest/dist/index.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
